phase4/y.output
Terminals unused in grammar

   T_FINAL
   T_LS
   T_RS
   T_PRINT
   T_MULASSGN
   T_DIVASSGN
   T_MODASSGN
   T_ADDASSGN
   T_SUBASSGN
   T_ANDASSGN
   T_XORASSGN
   T_ORASSGN


Grammar

    0 $accept: START $end

    1 START: Modifier T_CLASS T_ID '{' Method_declaration '}'

    2 $@1: %empty

    3 Method_declaration: Modifier Type T_MAIN '(' Type '[' ']' T_ARGS ')' $@1 '{' S '}'

    4 Modifier: W1 W2

    5 W1: T_PUBLIC
    6   | T_PRIVATE

    7 W2: T_STATIC
    8   | %empty

    9 S: Assignment ';' S

   10 @2: %empty

   11 S: IF ELSE @2 S

   12 @3: %empty

   13 S: FOR '{' S '}' @3 S
   14  | Variable_declaration ';' S
   15  | Array_declaration ';' S
   16  | Array_initialisation ';' S
   17  | UNREXPR ';'
   18  | %empty

   19 @4: %empty

   20 IF: T_IF '(' LOGICALOREXPR ')' @4 '{' S '}'

   21 @5: %empty

   22 ELSE: T_ELSE @5 '{' S '}'
   23     | %empty

   24 FOR: T_FOR '(' ';' ';' ')'
   25    | T_FOR '(' Assignment ';' ';' ')'
   26    | T_FOR '(' Assignment ';' Print LOGICALOREXPR ';' ')'

   27 @6: %empty

   28 FOR: T_FOR '(' Assignment ';' ';' @6 UNREXPR ')'
   29    | T_FOR '(' ';' Print LOGICALOREXPR ';' ')'

   30 @7: %empty

   31 FOR: T_FOR '(' ';' Print LOGICALOREXPR ';' @7 UNREXPR ')'

   32 @8: %empty

   33 FOR: T_FOR '(' Assignment ';' Print LOGICALOREXPR ';' @8 UNREXPR ')'

   34 @9: %empty

   35 FOR: T_FOR '(' ';' ';' @9 UNREXPR ')'

   36 Print: %empty

   37 UNREXPR: Expr T_INC
   38        | Expr T_DEC
   39        | T_INC Expr
   40        | T_DEC Expr

   41 Variable_declaration: Type Expr T_ASSGN LOGICALOREXPR X
   42                     | Type Expr X ';'

   43 X: ',' Assignment1 X
   44  | ',' T_ID X
   45  | %empty

   46 Assignment1: Expr Assignment_operator LOGICALOREXPR

   47 Array_declaration: Type Brackets Expr
   48                  | Type Expr Brackets

   49 Brackets: WI
   50         | WOI

   51 WOI: '[' ']' WI
   52    | '[' ']'

   53 WI: '[' INDEX ']'
   54   | '[' INDEX ']' WOI

   55 INDEX: T_NUM
   56      | T_ID

   57 Array_initialisation: Array_declaration Assignment_operator K

   58 K: V
   59  | V ',' K
   60  | T_NEW Type WI

   61 V: T_NUM
   62  | R

   63 R: '{' K '}'

   64 Type: T_INT
   65     | T_DOUBLE
   66     | T_CHAR
   67     | T_STRING
   68     | T_VOID

   69 Assignment: Expr Assignment_operator LOGICALOREXPR

   70 Assignment_operator: T_ASSGN
   71                    | T_ADD
   72                    | T_SUB
   73                    | T_MUL
   74                    | T_DIV
   75                    | T_AND
   76                    | T_OR
   77                    | T_XOR
   78                    | T_MOD

   79 LOGICALOREXPR: LOGICALOREXPR T_LOGOR LOGICALANDEXPR
   80              | LOGICALANDEXPR

   81 LOGICALANDEXPR: LOGICALANDEXPR T_LOGAND EQUALITYEXPR
   82               | EQUALITYEXPR

   83 EQUALITYEXPR: EQUALITYEXPR T_EQ RELEXPR
   84             | EQUALITYEXPR T_NEQ RELEXPR
   85             | RELEXPR

   86 RELEXPR: RELEXPR T_LT ADDEXPR
   87        | RELEXPR T_GT ADDEXPR
   88        | RELEXPR T_LTEQ ADDEXPR
   89        | RELEXPR T_GTEQ ADDEXPR
   90        | ADDEXPR

   91 ADDEXPR: ADDEXPR T_ADD MULTEXPR
   92        | ADDEXPR T_SUB MULTEXPR
   93        | MULTEXPR

   94 MULTEXPR: MULTEXPR T_MUL Expr
   95         | MULTEXPR T_DIV Expr
   96         | MULTEXPR T_MOD Expr
   97         | Expr

   98 Expr: '(' LOGICALOREXPR ')'
   99     | T_NUM
  100     | T_ID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 3 20 24 25 26 28 29 31 33 35 98
')' (41) 3 20 24 25 26 28 29 31 33 35 98
',' (44) 43 44 59
';' (59) 9 14 15 16 17 24 25 26 28 29 31 33 35 42
'[' (91) 3 51 52 53 54
']' (93) 3 51 52 53 54
'{' (123) 1 3 13 20 22 63
'}' (125) 1 3 13 20 22 63
error (256)
T_CLASS (258) 1
T_PUBLIC (259) 5
T_PRIVATE (260) 6
T_STATIC (261) 7
T_FINAL (262)
T_VOID (263) 68
T_INT (264) 64
T_CHAR (265) 66
T_DOUBLE (266) 65
T_IF (267) 20
T_ELSE (268) 22
T_NEW (269) 60
T_INC (270) 37 39
T_DEC (271) 38 40
T_LOGOR (272) 79
T_LOGAND (273) 81
T_OR (274) 76
T_AND (275) 75
T_EQ (276) 83
T_NEQ (277) 84
T_GTEQ (278) 89
T_LTEQ (279) 88
T_ADD (280) 71 91
T_SUB (281) 72 92
T_MUL (282) 73 94
T_DIV (283) 74 95
T_GT (284) 87
T_LT (285) 86
T_XOR (286) 77
T_MOD (287) 78 96
T_LS (288)
T_RS (289)
T_NUM (290) 55 61 99
T_ID (291) 1 44 56 100
T_STRING (292) 67
T_ARGS (293) 3
T_PRINT (294)
T_FOR (295) 24 25 26 28 29 31 33 35
T_MAIN (296) 3
T_ASSGN (297) 41 70
T_MULASSGN (298)
T_DIVASSGN (299)
T_MODASSGN (300)
T_ADDASSGN (301)
T_SUBASSGN (302)
T_ANDASSGN (303)
T_XORASSGN (304)
T_ORASSGN (305)


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
START (60)
    on left: 1, on right: 0
Method_declaration (61)
    on left: 3, on right: 1
$@1 (62)
    on left: 2, on right: 3
Modifier (63)
    on left: 4, on right: 1 3
W1 (64)
    on left: 5 6, on right: 4
W2 (65)
    on left: 7 8, on right: 4
S (66)
    on left: 9 11 13 14 15 16 17 18, on right: 3 9 11 13 14 15 16 20
    22
@2 (67)
    on left: 10, on right: 11
@3 (68)
    on left: 12, on right: 13
IF (69)
    on left: 20, on right: 11
@4 (70)
    on left: 19, on right: 20
ELSE (71)
    on left: 22 23, on right: 11
@5 (72)
    on left: 21, on right: 22
FOR (73)
    on left: 24 25 26 28 29 31 33 35, on right: 13
@6 (74)
    on left: 27, on right: 28
@7 (75)
    on left: 30, on right: 31
@8 (76)
    on left: 32, on right: 33
@9 (77)
    on left: 34, on right: 35
Print (78)
    on left: 36, on right: 26 29 31 33
UNREXPR (79)
    on left: 37 38 39 40, on right: 17 28 31 33 35
Variable_declaration (80)
    on left: 41 42, on right: 14
X (81)
    on left: 43 44 45, on right: 41 42 43 44
Assignment1 (82)
    on left: 46, on right: 43
Array_declaration (83)
    on left: 47 48, on right: 15 57
Brackets (84)
    on left: 49 50, on right: 47 48
WOI (85)
    on left: 51 52, on right: 50 54
WI (86)
    on left: 53 54, on right: 49 51 60
INDEX (87)
    on left: 55 56, on right: 53 54
Array_initialisation (88)
    on left: 57, on right: 16
K (89)
    on left: 58 59 60, on right: 57 59 63
V (90)
    on left: 61 62, on right: 58 59
R (91)
    on left: 63, on right: 62
Type (92)
    on left: 64 65 66 67 68, on right: 3 41 42 47 48 60
Assignment (93)
    on left: 69, on right: 9 25 26 28 33
Assignment_operator (94)
    on left: 70 71 72 73 74 75 76 77 78, on right: 46 57 69
LOGICALOREXPR (95)
    on left: 79 80, on right: 20 26 29 31 33 41 46 69 79 98
LOGICALANDEXPR (96)
    on left: 81 82, on right: 79 80 81
EQUALITYEXPR (97)
    on left: 83 84 85, on right: 81 82 83 84
RELEXPR (98)
    on left: 86 87 88 89 90, on right: 83 84 85 86 87 88 89
ADDEXPR (99)
    on left: 91 92 93, on right: 86 87 88 89 90 91 92
MULTEXPR (100)
    on left: 94 95 96 97, on right: 91 92 93 94 95 96
Expr (101)
    on left: 98 99 100, on right: 37 38 39 40 41 42 46 47 48 69 94
    95 96 97


State 0

    0 $accept: . START $end

    T_PUBLIC   shift, and go to state 1
    T_PRIVATE  shift, and go to state 2

    START     go to state 3
    Modifier  go to state 4
    W1        go to state 5


State 1

    5 W1: T_PUBLIC .

    $default  reduce using rule 5 (W1)


State 2

    6 W1: T_PRIVATE .

    $default  reduce using rule 6 (W1)


State 3

    0 $accept: START . $end

    $end  shift, and go to state 6


State 4

    1 START: Modifier . T_CLASS T_ID '{' Method_declaration '}'

    T_CLASS  shift, and go to state 7


State 5

    4 Modifier: W1 . W2

    T_STATIC  shift, and go to state 8

    $default  reduce using rule 8 (W2)

    W2  go to state 9


State 6

    0 $accept: START $end .

    $default  accept


State 7

    1 START: Modifier T_CLASS . T_ID '{' Method_declaration '}'

    T_ID  shift, and go to state 10


State 8

    7 W2: T_STATIC .

    $default  reduce using rule 7 (W2)


State 9

    4 Modifier: W1 W2 .

    $default  reduce using rule 4 (Modifier)


State 10

    1 START: Modifier T_CLASS T_ID . '{' Method_declaration '}'

    '{'  shift, and go to state 11


State 11

    1 START: Modifier T_CLASS T_ID '{' . Method_declaration '}'

    T_PUBLIC   shift, and go to state 1
    T_PRIVATE  shift, and go to state 2

    Method_declaration  go to state 12
    Modifier            go to state 13
    W1                  go to state 5


State 12

    1 START: Modifier T_CLASS T_ID '{' Method_declaration . '}'

    '}'  shift, and go to state 14


State 13

    3 Method_declaration: Modifier . Type T_MAIN '(' Type '[' ']' T_ARGS ')' $@1 '{' S '}'

    T_VOID    shift, and go to state 15
    T_INT     shift, and go to state 16
    T_CHAR    shift, and go to state 17
    T_DOUBLE  shift, and go to state 18
    T_STRING  shift, and go to state 19

    Type  go to state 20


State 14

    1 START: Modifier T_CLASS T_ID '{' Method_declaration '}' .

    $default  reduce using rule 1 (START)


State 15

   68 Type: T_VOID .

    $default  reduce using rule 68 (Type)


State 16

   64 Type: T_INT .

    $default  reduce using rule 64 (Type)


State 17

   66 Type: T_CHAR .

    $default  reduce using rule 66 (Type)


State 18

   65 Type: T_DOUBLE .

    $default  reduce using rule 65 (Type)


State 19

   67 Type: T_STRING .

    $default  reduce using rule 67 (Type)


State 20

    3 Method_declaration: Modifier Type . T_MAIN '(' Type '[' ']' T_ARGS ')' $@1 '{' S '}'

    T_MAIN  shift, and go to state 21


State 21

    3 Method_declaration: Modifier Type T_MAIN . '(' Type '[' ']' T_ARGS ')' $@1 '{' S '}'

    '('  shift, and go to state 22


State 22

    3 Method_declaration: Modifier Type T_MAIN '(' . Type '[' ']' T_ARGS ')' $@1 '{' S '}'

    T_VOID    shift, and go to state 15
    T_INT     shift, and go to state 16
    T_CHAR    shift, and go to state 17
    T_DOUBLE  shift, and go to state 18
    T_STRING  shift, and go to state 19

    Type  go to state 23


State 23

    3 Method_declaration: Modifier Type T_MAIN '(' Type . '[' ']' T_ARGS ')' $@1 '{' S '}'

    '['  shift, and go to state 24


State 24

    3 Method_declaration: Modifier Type T_MAIN '(' Type '[' . ']' T_ARGS ')' $@1 '{' S '}'

    ']'  shift, and go to state 25


State 25

    3 Method_declaration: Modifier Type T_MAIN '(' Type '[' ']' . T_ARGS ')' $@1 '{' S '}'

    T_ARGS  shift, and go to state 26


State 26

    3 Method_declaration: Modifier Type T_MAIN '(' Type '[' ']' T_ARGS . ')' $@1 '{' S '}'

    ')'  shift, and go to state 27


State 27

    3 Method_declaration: Modifier Type T_MAIN '(' Type '[' ']' T_ARGS ')' . $@1 '{' S '}'

    $default  reduce using rule 2 ($@1)

    $@1  go to state 28


State 28

    3 Method_declaration: Modifier Type T_MAIN '(' Type '[' ']' T_ARGS ')' $@1 . '{' S '}'

    '{'  shift, and go to state 29


State 29

    3 Method_declaration: Modifier Type T_MAIN '(' Type '[' ']' T_ARGS ')' $@1 '{' . S '}'

    T_VOID    shift, and go to state 15
    T_INT     shift, and go to state 16
    T_CHAR    shift, and go to state 17
    T_DOUBLE  shift, and go to state 18
    T_IF      shift, and go to state 30
    T_INC     shift, and go to state 31
    T_DEC     shift, and go to state 32
    T_NUM     shift, and go to state 33
    T_ID      shift, and go to state 34
    T_STRING  shift, and go to state 19
    T_FOR     shift, and go to state 35
    '('       shift, and go to state 36

    $default  reduce using rule 18 (S)

    S                     go to state 37
    IF                    go to state 38
    FOR                   go to state 39
    UNREXPR               go to state 40
    Variable_declaration  go to state 41
    Array_declaration     go to state 42
    Array_initialisation  go to state 43
    Type                  go to state 44
    Assignment            go to state 45
    Expr                  go to state 46


State 30

   20 IF: T_IF . '(' LOGICALOREXPR ')' @4 '{' S '}'

    '('  shift, and go to state 47


State 31

   39 UNREXPR: T_INC . Expr

    T_NUM  shift, and go to state 33
    T_ID   shift, and go to state 34
    '('    shift, and go to state 36

    Expr  go to state 48


State 32

   40 UNREXPR: T_DEC . Expr

    T_NUM  shift, and go to state 33
    T_ID   shift, and go to state 34
    '('    shift, and go to state 36

    Expr  go to state 49


State 33

   99 Expr: T_NUM .

    $default  reduce using rule 99 (Expr)


State 34

  100 Expr: T_ID .

    $default  reduce using rule 100 (Expr)


State 35

   24 FOR: T_FOR . '(' ';' ';' ')'
   25    | T_FOR . '(' Assignment ';' ';' ')'
   26    | T_FOR . '(' Assignment ';' Print LOGICALOREXPR ';' ')'
   28    | T_FOR . '(' Assignment ';' ';' @6 UNREXPR ')'
   29    | T_FOR . '(' ';' Print LOGICALOREXPR ';' ')'
   31    | T_FOR . '(' ';' Print LOGICALOREXPR ';' @7 UNREXPR ')'
   33    | T_FOR . '(' Assignment ';' Print LOGICALOREXPR ';' @8 UNREXPR ')'
   35    | T_FOR . '(' ';' ';' @9 UNREXPR ')'

    '('  shift, and go to state 50


State 36

   98 Expr: '(' . LOGICALOREXPR ')'

    T_NUM  shift, and go to state 33
    T_ID   shift, and go to state 34
    '('    shift, and go to state 36

    LOGICALOREXPR   go to state 51
    LOGICALANDEXPR  go to state 52
    EQUALITYEXPR    go to state 53
    RELEXPR         go to state 54
    ADDEXPR         go to state 55
    MULTEXPR        go to state 56
    Expr            go to state 57


State 37

    3 Method_declaration: Modifier Type T_MAIN '(' Type '[' ']' T_ARGS ')' $@1 '{' S . '}'

    '}'  shift, and go to state 58


State 38

   11 S: IF . ELSE @2 S

    T_ELSE  shift, and go to state 59

    $default  reduce using rule 23 (ELSE)

    ELSE  go to state 60


State 39

   13 S: FOR . '{' S '}' @3 S

    '{'  shift, and go to state 61


State 40

   17 S: UNREXPR . ';'

    ';'  shift, and go to state 62


State 41

   14 S: Variable_declaration . ';' S

    ';'  shift, and go to state 63


State 42

   15 S: Array_declaration . ';' S
   57 Array_initialisation: Array_declaration . Assignment_operator K
